add IdentityAdmin Middleware

--- a/src/IdentityAdmin/IdentityAdmin.csproj
+++ b/src/IdentityAdmin/IdentityAdmin.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IdentityAdmin.Core\IdentityAdmin.Core.csproj" />
   </ItemGroup>
 
