--- a/src/IdentityAdmin/IdentityAdmin.csproj
+++ b/src/IdentityAdmin/IdentityAdmin.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Authors>Sarin Na Wangkanai</Authors>
+    <PackageProjectUrl>https://github.com/IdentityAdmin/IdentityAdmin</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/IdentityAdmin/IdentityAdmin/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageId>Wangkanai.IdentityAdmin</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
