--- a/src/IdentityAdmin.Core/IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/IdentityAdmin.Core.csproj
@@ -13,6 +13,8 @@
 Core Module</Description>
     <PackageTags>aspnetcore;identityserver;admin</PackageTags>
     <Copyright>Copyright © 2016 Sarin Na Wangkanai</Copyright>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/IdentityAdmin/IdentityAdmin.git</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
