--- a/src/IdentityAdmin/IdentityAdmin.csproj
+++ b/src/IdentityAdmin/IdentityAdmin.csproj
@@ -13,6 +13,8 @@
     <Description>IdentityServer Administration Management Portal</Description>
     <PackageTags>aspnetcore;identityserver;admin</PackageTags>
     <Copyright>Copyright © 2016 Sarin Na Wangkanai</Copyright>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/IdentityAdmin/IdentityAdmin.git</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
