--- a/src/IdentityAdmin.Api/IdentityAdmin.Api.csproj
+++ b/src/IdentityAdmin.Api/IdentityAdmin.Api.csproj
@@ -17,6 +17,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IdentityAdmin.Core\IdentityAdmin.Core.csproj" />
   </ItemGroup>
 
