--- a/src/IdentityAdmin.Api/IdentityAdmin.Api.csproj
+++ b/src/IdentityAdmin.Api/IdentityAdmin.Api.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>Wangkanai.IdentityAdmin.Api</PackageId>
-    <version>$version$</version>
+    <VersionPrefix>0.0.0</VersionPrefix>
     <Authors>Sarin Na Wangkanai</Authors>
     <Company>IdentityAdmin</Company>
     <Description>IdentityAdmin Api</Description>
