--- a/src/IdentityAdmin/IdentityAdmin.csproj
+++ b/src/IdentityAdmin/IdentityAdmin.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <version>$version$</version>
+    <VersionPrefix>0.0.0</VersionPrefix>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Authors>Sarin Na Wangkanai</Authors>
