--- a/src/IdentityAdmin/IdentityAdmin.csproj
+++ b/src/IdentityAdmin/IdentityAdmin.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <VersionPrefix>0.0.0</VersionPrefix>
+    <VersionSuffix></VersionSuffix>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Authors>Sarin Na Wangkanai</Authors>
