--- a/src/IdentityAdmin.Core/IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/IdentityAdmin.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <VersionPrefix>0.0.0</VersionPrefix>
+    <VersionSuffix>alpha001</VersionSuffix>
     <Authors>Sarin Na Wangkanai</Authors>
     <PackageProjectUrl>https://github.com/IdentityAdmin/IdentityAdmin</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/IdentityAdmin/IdentityAdmin/blob/master/LICENSE</PackageLicenseUrl>
