--- a/src/IdentityAdmin.Api/src/IdentityAdmin.Api.csproj
+++ b/src/IdentityAdmin.Api/src/IdentityAdmin.Api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <PackageId>Wangkanai.IdentityAdmin.Api</PackageId>
     <VersionPrefix>0.0.0</VersionPrefix>
     <VersionSuffix>alpha001</VersionSuffix>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IdentityAdmin.Core\IdentityAdmin.Core.csproj" />
+    <ProjectReference Include="..\..\IdentityAdmin.Core\src\IdentityAdmin.Core.csproj" />
   </ItemGroup>
 
 </Project>
