--- a/src/IdentityAdmin.Core/src/IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/IdentityAdmin.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <VersionPrefix>0.0.0</VersionPrefix>
     <VersionSuffix>alpha001</VersionSuffix>
