--- a/src/IdentityAdmin/src/IdentityAdmin.csproj
+++ b/src/IdentityAdmin/src/IdentityAdmin.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <VersionPrefix>0.0.0</VersionPrefix>
     <VersionSuffix>alpha001</VersionSuffix>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -24,8 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IdentityAdmin.Api\IdentityAdmin.Api.csproj" />
-    <ProjectReference Include="..\IdentityAdmin.Core\IdentityAdmin.Core.csproj" />
+    <ProjectReference Include="..\..\IdentityAdmin.Api\src\IdentityAdmin.Api.csproj" />
+    <ProjectReference Include="..\..\IdentityAdmin.Core\src\IdentityAdmin.Core.csproj" />
   </ItemGroup>
 
 </Project>
