--- a/src/IdentityAdmin.Core/src/IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/IdentityAdmin.Core.csproj
@@ -6,10 +6,8 @@
     <Authors>Sarin Na Wangkanai</Authors>
     <PackageProjectUrl>https://github.com/IdentityAdmin/IdentityAdmin</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/IdentityAdmin/IdentityAdmin/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageId>Wangkanai.IdentityAdmin.Core</PackageId>
     <PackageIconUrl>https://raw.githubusercontent.com/IdentityAdmin/IdentityAdmin/master/asset/Identity-admin-small.png</PackageIconUrl>
-    <Description>IdentityServer Administration Management Portal
-Core Module</Description>
+    <Description>IdentityServer Administration Management Portal Core Module</Description>
     <PackageTags>aspnetcore;identityserver;admin</PackageTags>
     <Copyright>Copyright © 2016 Sarin Na Wangkanai</Copyright>
     <RepositoryType>git</RepositoryType>
