--- a/src/IdentityAdmin.Api/src/IdentityAdmin.Api.csproj
+++ b/src/IdentityAdmin.Api/src/IdentityAdmin.Api.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
