--- a/src/IdentityAdmin.Core/src/IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/IdentityAdmin.Core.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
