fixed project namespace

--- a/src/IdentityAdmin.Api/src/Wangkanai.IdentityAdmin.Api.csproj
+++ b/src/IdentityAdmin.Api/src/Wangkanai.IdentityAdmin.Api.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\IdentityAdmin.Core\src\IdentityAdmin.Core.csproj" />
+    <ProjectReference Include="..\..\IdentityAdmin.Core\src\Wangkanai.IdentityAdmin.Core.csproj" />
   </ItemGroup>
 
 </Project>
