--- a/sandbox/Sample/Sample.csproj
+++ b/sandbox/Sample/Sample.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" PrivateAssets="All" />
+    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta13" />
   </ItemGroup>
 
 </Project>
