--- a/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Version>0.0.100</Version>
 
     <Authors>Sarin Na Wangkanai</Authors>
     <Description>IdentityServer Administration Management Portal Core Module</Description>
