change myget feed

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ nuget:
   account_feed: true
   project_feed: true
 install:
-  - cmd: nuget sources add -Name MyAccountFeed -Source https://www.myget.org/F/wangkanai/api/v2
+  - cmd: nuget sources add -Name MyAccountFeed -Source https://www.myget.org/F/wangkanai/api/v3/index.json
 build_script:
   - ps: ./run.ps1
 clone_depth: 1
