--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,8 @@ install:
   - cmd: nuget sources add -Name MyAccountFeed -Source https://www.myget.org/F/wangkanai/api/v3/index.json
 before_build:
   - cmd: nuget restore
+build:
+  verbosity: minimal
 build_script:
   - ps: ./run.ps1
 clone_depth: 1
