--- a/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
@@ -21,4 +21,8 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta15" />
+  </ItemGroup>
+
 </Project>
