repack nuget to include reference project

--- a/src/IdentityAdmin/src/Wangkanai.IdentityAdmin.csproj
+++ b/src/IdentityAdmin/src/Wangkanai.IdentityAdmin.csproj
@@ -13,13 +13,16 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 
     <PackageProjectUrl>https://github.com/Wangkanai/IdentityAdmin</PackageProjectUrl>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/Wangkanai/IdentityAdmin.git</RepositoryUrl>
     <RootNamespace>Wangkanai.IdentityAdmin</RootNamespace>
 
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+    <PackageIconUrl>https://raw.githubusercontent.com/wangkanai/IdentityAdmin/dev/asset/Identity-admin-small.png</PackageIconUrl>
 
-    <PackageIcon>Identity-admin-small.png</PackageIcon>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <DevelopmentDependency>true</DevelopmentDependency>
+    <BuildOutputTargetFolder>build</BuildOutputTargetFolder>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,13 +32,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\IdentityAdmin.Core\src\Wangkanai.IdentityAdmin.Core.csproj" />
     <ProjectReference Include="..\..\IdentityAdmin.WebApi\src\Wangkanai.IdentityAdmin.WebApi.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\..\asset\Identity-admin-small.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
   </ItemGroup>
 
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
