updat enuget project dll reference

--- a/src/IdentityAdmin/src/Wangkanai.IdentityAdmin.csproj
+++ b/src/IdentityAdmin/src/Wangkanai.IdentityAdmin.csproj
@@ -17,7 +17,7 @@
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <NoWarn>$(NoWarn)1701;1702;NU5048</NoWarn>
+    <NoWarn>NU5048</NoWarn>
 
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
@@ -27,13 +27,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\IdentityAdmin.Core\src\Wangkanai.IdentityAdmin.Core.csproj" >
+    <ProjectReference Include="..\..\IdentityAdmin.Core\src\Wangkanai.IdentityAdmin.Core.csproj">
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
-      <IncludeAssets>ProjectB.dll</IncludeAssets>
     </ProjectReference>
-    <ProjectReference Include="..\..\IdentityAdmin.WebApi\src\Wangkanai.IdentityAdmin.WebApi.csproj" >
+    <ProjectReference Include="..\..\IdentityAdmin.WebApi\src\Wangkanai.IdentityAdmin.WebApi.csproj">
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
-      <IncludeAssets>ProjectB.dll</IncludeAssets>
     </ProjectReference>
   </ItemGroup>
 
