--- a/sample/WebApp/WebApp.csproj
+++ b/sample/WebApp/WebApp.csproj
@@ -25,6 +25,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IdentityAdmin\src\Wangkanai.IdentityAdmin.csproj" />
+    <ProjectReference Include="..\..\src\IdentityAdmin\src\Wangkanai.IdentityAdmin.csproj" />
   </ItemGroup>
 </Project>
