--- a/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta15" />
+    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
