--- a/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
+++ b/src/IdentityAdmin.Core/src/Wangkanai.IdentityAdmin.Core.csproj
@@ -5,6 +5,7 @@
     <Version>0.0.0</Version>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <IsShippingPackage>true</IsShippingPackage>
 
     <Authors>Sarin Na Wangkanai</Authors>
     <Description>IdentityServer Administration Management Portal Core Module</Description>
