init admin portal ui

--- a/src/IdentityAdmin.UI/src/Wangkanai.IdentityAdmin.UI.csproj
+++ b/src/IdentityAdmin.UI/src/Wangkanai.IdentityAdmin.UI.csproj
@@ -11,5 +11,12 @@
 
   </PropertyGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\IdentityAdmin.Core\src\Wangkanai.IdentityAdmin.Core.csproj" />
+  </ItemGroup>
 
 </Project>
