--- a/sample/WebApp/WebApp.csproj
+++ b/sample/WebApp/WebApp.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="IdentityServer4" Version="3.0.1" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="3.0.1" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
 
     <PackageReference Include="RSK.Audit" Version="2.0.0-preview1" />
     <PackageReference Include="RSK.Audit.EF" Version="2.0.0-preview1" />
