--- a/src/IdentityAdmin.UI/src/Wangkanai.IdentityAdmin.UI.csproj
+++ b/src/IdentityAdmin.UI/src/Wangkanai.IdentityAdmin.UI.csproj
@@ -8,7 +8,7 @@
     <IsShippingPackage>true</IsShippingPackage>
     <IsAspNetCoreApp>true</IsAspNetCoreApp>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
