--- a/src/IdentityAdmin.WebApi/src/Wangkanai.IdentityAdmin.WebApi.csproj
+++ b/src/IdentityAdmin.WebApi/src/Wangkanai.IdentityAdmin.WebApi.csproj
@@ -7,6 +7,7 @@
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <IsShippingPackage>true</IsShippingPackage>
+    <IsPackable>true</IsPackable>
 
     <Authors>Sarin Na Wangkanai</Authors>
     <Description>IdentityServer Administration Management Portal Web Api Module</Description>
