--- a/test/Wangkanai.IdentityAdmin.Tests.csproj
+++ b/test/Wangkanai.IdentityAdmin.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -13,8 +13,5 @@
         <PackageReference Include="coverlet.collector" Version="1.0.1" />
     </ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="obj\Debug\netcoreapp3.0" />
-    </ItemGroup>
 
 </Project>
