--- a/.editorconfig
+++ b/.editorconfig
@@ -2,14 +2,14 @@ root = true
 # You can modify the rules from these initially generated values to suit your own policies
 # You can learn more about editorconfig here: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference
 
-
 [*]
-indent_style = space
 charset = utf-8
+indent_style = space
+indent_size = 4
+tab_width = 4
+end_of_line = crlf
 trim_trailing_whitespace = false
 insert_final_newline = false
-end_of_line = crlf
-indent_size = 4
 
 # Microsoft .NET properties
 csharp_new_line_before_members_in_object_initializers = false
@@ -80,22 +80,17 @@ resharper_web_config_wrong_module_highlighting = warning
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = true
 
-[*.sh]
-end_of_line = lf
-
-[*.js.map]
-indent_style = space
+[*.csproj]
 indent_size = 2
 
-[{*.yml, *.yaml}]
-indent_style = space
+[*.{css, scss, less, sass}]
 indent_size = 2
 
-[{.eslintrc, .stylelintrc, jest.config, .babelrc, bowerrc, *.jsb3, *.jsb2, *.json}]
-indent_style = space
+[*.{js, js.map}]
 indent_size = 2
 
-[*.{appxmanifest, asax, ascx, aspx, build, cs, cshtml, dtd, fs, fsi, fsscript, fsx, master, ml, mli, nuspec, razor, resw, resx, skin, vb, xaml, xamlx, xoml, xsd}]
-indent_style = space
-indent_size = 4
-tab_width = 4
+[*.{yml, yaml}]
+indent_size = 2
+
+[*.{eslintrc, stylelintrc, jest.config, babelrc, bowerrc, jsb3, jsb2, json}]
+indent_size = 2
