--- a/src/Wangkanai.IdentityAdmin.csproj
+++ b/src/Wangkanai.IdentityAdmin.csproj
@@ -1,30 +1,41 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
-        <Version>0.0.100</Version>
-        <LangVersion>8.0</LangVersion>
-        <Nullable>enable</Nullable>
+  <PropertyGroup>
+    <VersionPrefix>0.0</VersionPrefix>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
 
-        <Authors>Sarin Na Wangkanai</Authors>
-        <Description>IdentityAdmin is a free, open source that provides the necessary administration portal for managing IdentityServer to manage clients and users. IdentityAdmin will allow easier implementation of IdentityServer whom provides no administration tool for managing its configuration.</Description>
-        <Copyright>Copyright © 2016 Sarin Na Wangkanai</Copyright>
-        <PackageTags>aspnetcore;identityserver;admin</PackageTags>
-        <PackageProjectUrl>https://github.com/Wangkanai/IdentityAdmin</PackageProjectUrl>
-        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-        <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>git://github.com/wangkanai/IdentityAdmin</RepositoryUrl>
-        <PackageIconUrl>https://raw.githubusercontent.com/wangkanai/IdentityAdmin/dev/asset/Identity-admin-small.png</PackageIconUrl>
-        <NoWarn>NU5048;NU5104</NoWarn>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <NoWarn>NU5048;NU5104</NoWarn>
+  </PropertyGroup>
+  
+  <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
 
-    </PropertyGroup>
+  <PropertyGroup>
+    <Product>IdentityAdmin</Product>
+    <Authors>Sarin Na Wangkanai</Authors>
+    <Copyright>©2016-2020 Sarin Na Wangkanai, All rights reserved</Copyright>
+    
+    <Description>IdentityAdmin is a free, open source that provides the necessary administration portal for managing IdentityServer to manage clients and users. IdentityAdmin will allow easier implementation of IdentityServer whom provides no administration tool for managing its configuration.</Description>
+    
+    <PackageTags>aspnetcore;identityserver;admin</PackageTags>
+    <PackageProjectUrl>https://github.com/Wangkanai/IdentityAdmin</PackageProjectUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>git://github.com/wangkanai/IdentityAdmin</RepositoryUrl>
+    <PackageLicenseUrl>https://github.com/wangkanai/IdentityAdmin/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/wangkanai/IdentityAdmin/main/asset/Identity-admin-small.png</PackageIconUrl>
 
-    <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha08" />
-    </ItemGroup>
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha13"/>
+  </ItemGroup>
 
 </Project>
